WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106458
CSSParser does not allow the absence of whitespace between "and" and "expression"
https://bugs.webkit.org/show_bug.cgi?id=106458
Summary
CSSParser does not allow the absence of whitespace between "and" and "express...
Alexander Pavlov (apavlov)
Reported
2013-01-09 08:02:24 PST
@media screen and(max-width: 800px) ^^ is not considered valid input, even though
http://www.w3.org/TR/css3-mediaqueries/#syntax
says "S*" everywhere. Upstreaming
http://code.google.com/p/chromium/issues/detail?id=168339
Attachments
Patch
(8.03 KB, patch)
2013-01-10 05:27 PST
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2013-01-10 05:27:40 PST
Created
attachment 182117
[details]
Patch
WebKit Review Bot
Comment 2
2013-01-10 06:42:17 PST
Comment on
attachment 182117
[details]
Patch Clearing flags on attachment: 182117 Committed
r139316
: <
http://trac.webkit.org/changeset/139316
>
WebKit Review Bot
Comment 3
2013-01-10 06:42:20 PST
All reviewed patches have been landed. Closing bug.
Dominik Röttsches (drott)
Comment 4
2013-01-10 07:14:45 PST
Committed
r139317
: <
http://trac.webkit.org/changeset/139317
>
Dominik Röttsches (drott)
Comment 5
2013-01-10 07:32:15 PST
(In reply to
comment #4
)
> Committed
r139317
: <
http://trac.webkit.org/changeset/139317
>
Sorry, $ webkit-patch land took the wrong ChangeLog for my gardening patch.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug