CSSParser does not allow the absence of whitespace between "and" and "expression" https://bugs.webkit.org/show_bug.cgi?id=106458

Reviewed by Antti Koivisto.

Source/WebCore:

The issue was that a construct similar to "and(max-width: 480px)" looks like a function call (token type FUNCTION), even though
it is actually a MEDIA_AND followed by a parenthesized expression.

Test: fast/css/media-rule-no-whitespace.html

* css/CSSParser.cpp:
(WebCore::CSSParser::detectFunctionTypeToken): Return if the detection has been successful.
(WebCore::CSSParser::realLex): Test for media query tokens if function type detection has failed.
* css/CSSParser.h:

LayoutTests:

* fast/css/media-rule-no-whitespace-expected.txt: Added.
* fast/css/media-rule-no-whitespace.html: Added.


Canonical link: https://commits.webkit.org/124763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139316 268f45cc-cd09-0410-ab3c-d52691b4dbfc